# complience_task

./: README.md  app.py  pyproject.toml
data/: country.csv  ssrf.csv
first_model/: README.md  date_reg.py  distribution.py  final_preprocess.py  last_aug_MinMax.py  main.py  model.py  nalog_per.py  neg_gd.py  neg_inf.py  preprocessing.py  zeros.csv
model/: algorithm.py  analysis.py  config.py  itpn_checker.py  itpn_ogrn_checker.py  phonenum_checker.py
parsers/: INN_parser.py  mvp_parser.py  phone_number_parser.py  sped_up_parser.py
