[project]
name = "xmas-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "joblib>=1.4.2",
    "openpyxl>=3.1.5",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "setuptools>=75.6.0",
    "streamlit>=1.41.1",
    "ydata-profiling>=4.12.1",
]
